--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">098_RoomDatabase</string>
+    <string name="entry_siswa">Tambah Siswa</string>
+    <string name="deskripsi_no_item">Tidak ada data Siswa. Tap + untuk menambah data</string>
+    <string name="nama">Nama Siswa*</string>
     <string name="alamat">Alamat Siswa*</string>
     <string name="telpon">Telpon Siswa*</string>
-    <string name="nama1">Nama Siswa  :</string>
+    <string name="nama1">Nama Siswa :</string>
     <string name="alamat1">Alamat Siswa :</string>
     <string name="telpon1">Telpon Siswa :</string>
     <string name="required_field">* required fields</string>
